# causal-inference-marketing

./: .gitignore  .gitmodules  .mypy_cache  .pre-commit-config.yaml  BOOK_CODE_ANALYSIS.md  CI_PERFORMANCE_OPTIMIZATION.md  CLAUDE.md  Causal_Inference_Project.md  DAG_example.py  DoubleML.md  INTEGRATION.md  LICENSE  Makefile  NHEFS_Codebook.xls  PSM-example.py  Prompt_Claude  README.md  S_curve.py  S_curve_minimal.py  TEST_SUITE_SUMMARY.md  TS-EBA_example.py  Whatif.txt  causal-inference-marketing-tools-plan.md  claude-review-README.md  claude-review.sh  docker-requirements.txt  doubleml.txt  fix_all_unions.py  fix_final_unions.sh  fix_mixed_unions.sh  fix_remaining_unions.sh  fix_unions.py  pyproject.toml  test_claude_review_fixes.py
.claude/: agents
.github/: dependabot.yml  labels.yml  (+1 more)
libs/causal_inference/: .mypy_cache  README.md  pyproject.toml
libs/causal_inference/causal_inference/: __init__.py
libs/causal_inference/causal_inference/api/: __init__.py  unified_estimator.py
libs/causal_inference/causal_inference/core/: __init__.py  base.py  base.py.bak  base.py.bak2  base.py.bak3  bootstrap.py  bootstrap.py.bak  bootstrap.py.bak2  bootstrap.py.bak3  longitudinal.py  optimization_config.py  optimization_mixin.py
libs/causal_inference/causal_inference/data/: __init__.py  missing_data.py  nhefs.py  synthetic.py  validation.py
libs/causal_inference/causal_inference/diagnostics/: __init__.py  assumptions.py  balance.py  falsification.py  overlap.py  reporting.py  sensitivity.py  specification.py  validation_suite.py  visualization.py
libs/causal_inference/causal_inference/discovery/: __init__.py  base.py  base.py.bak  benchmarks.py  constraint_based.py  integration.py  score_based.py  utils.py
libs/causal_inference/causal_inference/estimators/: __init__.py  aipw.py  bayesian.py  causal_forest.py  difference_in_differences.py  doubly_robust_ml.py  g_computation.py  g_estimation.py  ipw.py  iv.py  mediation.py  meta_learners.py  orthogonal_moments.py  propensity_score.py  regression_discontinuity.py  subgroup_discovery.py  survival.py  survival_aipw.py  survival_g_computation.py  survival_ipw.py  synthetic_control.py  time_varying.py  tmle.py
libs/causal_inference/causal_inference/evaluation/: __init__.py  hte_metrics.py
libs/causal_inference/causal_inference/examples/: rdd_nhefs_example.py
libs/causal_inference/causal_inference/interference/: __init__.py  diagnostics.py  exposure_mapping.py  network_inference.py  spillover_estimation.py
libs/causal_inference/causal_inference/ml/: __init__.py  cross_fitting.py  super_learner.py  super_learner.py.bak  super_learner.py.bak10  super_learner.py.bak11  super_learner.py.bak2  super_learner.py.bak3  super_learner.py.bak4  super_learner.py.bak5  super_learner.py.bak6  super_learner.py.bak7  super_learner.py.bak8  super_learner.py.bak9
libs/causal_inference/causal_inference/policy/: __init__.py  integration.py  off_policy_evaluation.py  optimization.py  simulation.py
libs/causal_inference/causal_inference/reporting/: __init__.py  html_generator.py  nlg.py
libs/causal_inference/causal_inference/sensitivity/: __init__.py  benchmarks.py  controls.py  e_values.py  oster.py  placebo.py  reporting.py  rosenbaum.py  utils.py
libs/causal_inference/causal_inference/target_trial/: __init__.py  emulator.py  protocol.py  results.py
libs/causal_inference/causal_inference/testing/: __init__.py  performance.py  synthetic.py  validation.py
libs/causal_inference/causal_inference/transportability/: __init__.py  diagnostics.py  integration.py  tmtl.py  weighting.py
libs/causal_inference/causal_inference/utils/: __init__.py  benchmarking.py  memory_efficient.py  streaming.py  validation.py
libs/causal_inference/causal_inference/visualization/: __init__.py  balance_plots.py  propensity_plots.py  report_generator.py  residual_analysis.py  weight_diagnostics.py
libs/causal_inference/causal_inference/visualization/templates/: comprehensive_template.html  executive_template.html
libs/causal_inference/examples/: did_nhefs_example.py  meta_learners_nhefs_example.py  policy_optimization_marketing.py
libs/causal_inference/tests/: __init__.py  conftest.py  test_aipw.py  test_aipw_optimization.py  test_aipw_optimization_edge_cases.py  test_base.py  test_bayesian.py  test_bootstrap.py  test_causal_discovery.py  test_causal_forest.py  test_claude_review_fixes.py  test_comprehensive_diagnostics.py  test_comprehensive_tutorial_workflow.py  test_data_integration.py  test_data_nhefs.py  test_data_synthetic.py  test_data_validation.py  test_diagnostics.py  test_diagnostics_integration.py  test_difference_in_differences.py  test_dml_diagnostics.py  test_edge_cases.py  test_enhanced_sensitivity.py  test_ensemble_cv_fallback.py  test_error_handling_validation.py  test_g_computation.py  test_g_computation_cv_ensemble.py  test_g_computation_ensemble.py  test_g_estimation.py  test_hte_metrics.py  test_interference_integration.py  test_ipw.py  test_ipw_optimization.py  test_issue_134_type_guards.py  test_issue_135_141_ensemble_coverage.py  test_issue_137_cv_ensemble_weights.py  test_issue_138_bootstrap_ensemble.py  test_issue_139_140_ensemble_params_threshold.py  test_issue_139_ensemble_model_params.py  test_issue_142_positivity_diagnostics.py  (+23 more)
libs/causal_inference/tests/integration/: test_end_to_end_reporting.py  test_policy_integration.py  test_transportability_integration.py  test_visualization_integration.py
libs/causal_inference/tests/unit/: test_unified_api.py  test_visualization.py
libs/causal_inference/tests/unit/interference/: __init__.py  test_diagnostics.py  test_exposure_mapping.py  test_network_inference.py  test_spillover_estimation.py
libs/causal_inference/tests/unit/policy/: __init__.py  test_diagnostics.py  test_integration.py  test_off_policy_evaluation.py  test_optimization.py
libs/causal_inference/tests/unit/transportability/: __init__.py  test_diagnostics.py  test_tmtl.py  test_weighting.py
services/causal_api/: main.py  pyproject.toml
services/causal_api/routes/: __init__.py  attribution.py  health.py
(+103 files in other folders)
