[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causal-inference-marketing"
version = "0.1.0"
description = "Causal inference tools for marketing applications - monorepo compatible structure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Robert Welborn"},
]
keywords = [
    "causal-inference",
    "marketing",
    "attribution",
    "incrementality",
    "media-mix-modeling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    # Core dependencies matching monorepo
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # API and database (matching monorepo)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    # Graph algorithms for causal discovery
    "networkx>=3.0.0",
    # Observability (matching monorepo)
    "prometheus-client>=0.19.0",
    # Causal inference specific
    # "pymc>=5.10.0",  # Temporarily disabled for Python 3.13 compatibility
    "hypothesis>=6.136.4",
    "pymc>=5.12.0",
    "arviz>=0.17.1",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.1.0",
    "joblib>=1.3.0",
    "mlflow>=2.15.1",
    "shap>=0.45.0",
    "alibi>=0.9.4",
    # "pymc>=5.10.0",  # Already included in main dependencies with version >=5.12.0
    "lifelines>=0.27.0",  # Survival analysis library
    "scikit-survival>=0.22.0",  # ML-based survival analysis
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
    "nbsphinx>=0.9.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]
dev = [
    "ruff>=0.1.6",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.6.0",
    "mypy>=1.7.0",
    "pandas-stubs>=2.3.0.250703; python_version>='3.10'",
    "types-networkx>=3.0.0; python_version>='3.10'",
    "pre-commit>=3.5.0",
    "safety>=2.3.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.1",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.88.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/datablogin/causal-inference-marketing"
Repository = "https://github.com/datablogin/causal-inference-marketing"
Documentation = "https://github.com/datablogin/causal-inference-marketing#readme"
Issues = "https://github.com/datablogin/causal-inference-marketing/issues"

[tool.hatch.build.targets.wheel]
packages = ["libs", "services", "shared"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.idea",
    "/tests",
    "/.gitignore",
]

# Black formatting
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff linting
[tool.ruff]
target-version = "py39"
line-length = 88
extend-exclude = ["libs/causal_inference_python_code/**"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "W"]
ignore = ["E501", "N806", "UP007", "UP038"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"shared/config/causal_config.py" = ["N805"]  # Pydantic validators use cls, not self

[tool.ruff.lint.isort]
known-first-party = ["causal_inference", "shared"]

# MyPy type checking
[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
exclude = [
    "libs/causal_inference_python_code/.*",
    "libs/causal_inference/tests/.*",
    "libs/causal_inference/causal_inference/estimators/survival.py",
    "libs/causal_inference/causal_inference/estimators/survival_g_computation.py",
    "libs/causal_inference/causal_inference/estimators/survival_ipw.py",
    "libs/causal_inference/causal_inference/estimators/survival_aipw.py",
]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "scipy.*",
    "sklearn.*",
    "statsmodels.*",
    "matplotlib.*",
    "seaborn.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["libs", "services", "shared", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 480
timeout_method = "thread"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=causal_inference",
    "--cov=shared",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external resources",
    "benchmark: marks performance benchmark tests",
    "property: marks property-based tests using hypothesis",
]

# Coverage configuration
[tool.coverage.run]
source = ["libs/causal_inference", "shared"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.0.250703; python_version>='3.10'",
    "types-networkx>=3.4.2.20250509",
]
test = [
    "hypothesis>=6.136.4",
    "pytest-benchmark>=5.1.0",
]
