[project]
name = "causal-inference"
version = "0.1.0"
description = "Causal inference tools for marketing applications"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies matching monorepo
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # API and database (matching monorepo)
    "fastapi>=0.104.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    # Causal inference specific
    "pymc>=5.10.0", # Bayesian modeling (already in monorepo)
    "networkx>=3.5",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.1.0",
    "joblib>=1.3.0",
    "mlflow>=2.15.1",
    "shap>=0.45.0",
    "alibi>=0.9.4",
]
dev = [
    "ruff>=0.1.6",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.1",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP017", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["causal_inference"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 300
timeout_method = "thread"
