[project]
name = "causal-inference-marketing"
version = "0.1.0"
description = "Causal inference library for marketing analytics — AIPW, TMLE, G-computation, IPW, causal discovery, and 30+ estimators."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Robert Welborn", email = "robert@datablogin.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "networkx>=3.1",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
bayesian = ["pymc>=5.12.0", "arviz>=0.17.1"]
optimization = ["cvxpy>=1.4.0"]
ml = ["lightgbm>=4.0.0", "joblib>=1.3.0", "shap>=0.44.0"]
all = ["causal-inference-marketing[bayesian,optimization,ml]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "hypothesis>=6.0.0",
]

[project.urls]
Repository = "https://github.com/datablogin/causal-inference-marketing"
Issues = "https://github.com/datablogin/causal-inference-marketing/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["causal_inference"]

[tool.hatch.build.targets.sdist]
exclude = ["tests", "examples", ".mypy_cache", ".pytest_cache", ".ruff_cache", "**/*.bak*"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP017", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["causal_inference"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 300
timeout_method = "thread"
# Custom markers for test categorization
markers = [
    "slow: marks tests as slow (deselected with '-m \"not slow\"')",
    "fast: marks tests as fast (run first in CI)",
    "unit: unit tests",
    "integration: integration tests",
    "benchmark: benchmark tests"
]
